# xapp

./: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac  makedoc  makepot  meson.build  meson_options.txt  xapp.pot
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build.yml
data/: 80xapp-gtk3-module  80xapp-gtk3-module.sh  meson.build
debian/: changelog  control  copyright  gir1.2-xapp-1.0.install  gir1.2-xapp-1.0.install.in  gir1.2-xappgtk2-1.0.install  libxapp-dev.install  libxapp-gtk3-module.install  libxapp-gtk3-module.lintian-overrides  libxapp-status-icon-gtk2-1.install  libxapp-status-icon-gtk2-dev.install  libxapp1.acc.in  libxapp1.install  libxapp1.maintscript  libxapp1.postinst  libxapp1.symbols  mate-xapp-status-applet.install  mate-xapp-status-applet.lintian-overrides  not-installed  rules  xapp-sn-watcher.install  xapps-common.install  xapps-common.lintian-overrides  xapps-common.maintscript  xapps-doc.install
debian/source/: lintian-overrides
docs/: Makefile.am  meson.build  xapp-docs.xml
docs/reference/: Makefile.am  XAppDarkModeManager.html  XAppFavorites.html  XAppGpuOffloadHelper.html  XAppGtkWindow.html  XAppIconChooserButton.html  XAppIconChooserDialog.html  XAppKbdLayoutController.html  XAppMonitorBlanker.html  XAppObjectManagerClient.html  XAppPreferencesWindow.html  XAppStackSidebar.html  XAppStatusIcon.html  XAppStatusIconInterfaceSkeleton.html  XAppStatusIconMonitor.html  XAppVisibilityGroup.html  annotation-glossary.html  api-index-full.html  ch01.html  deprecated-api-index.html  gtkdocentities.ent.in  index.html  libxapp-xapp-util.html  libxapp.devhelp2  meson.build  object-tree.html  style.css  xapp-docs.xml
docs/xml/: meson.build
files/: meson.build
files/usr/share/vala/vapi/: xapp.vapi
icons/: adwaita-symbolic-icons.info  list-missing-icons.py  meson.build  xapp-scan-code-for-adwaita-symbolic-icons.in
libxapp/: Makefile.am  XApp-1.0.metadata  favorite-vfs-file-enumerator.c  favorite-vfs-file-enumerator.h  favorite-vfs-file-monitor.c  favorite-vfs-file-monitor.h  favorite-vfs-file.c  favorite-vfs-file.h  g-codegen.py  install_generated_header.py  meson.build  org.x.StatusIcon.xml  sn-item.xml  sn-watcher.xml  xapp-dark-mode-manager.c  xapp-dark-mode-manager.h  xapp-debug.c  xapp-debug.h  xapp-display.c  xapp-display.h  xapp-enums.c.template  xapp-enums.h.template  xapp-favorites.c  xapp-favorites.h  xapp-glade-catalog.c  xapp-glade-catalog.xml  xapp-gpu-offload-helper.c  xapp-gpu-offload-helper.h  xapp-gtk-utils.c  xapp-gtk-utils.h  xapp-gtk-window-backend.h  xapp-gtk-window-wayland.c  xapp-gtk-window-x11.c  xapp-gtk-window.c  xapp-gtk-window.h  xapp-gtk3-module.c  xapp-icon-chooser-button.c  xapp-icon-chooser-button.h  xapp-icon-chooser-dialog.c  xapp-icon-chooser-dialog.h  (+29 more)
meson-scripts/: g-codegen.py  module_xinit_fix_perms.py
po/: LINGUAS  POTFILES  POTFILES.in  af.po  am.po  ar.po  ast.po  az.po  be.po  ber.po  bg.po  bn.po  br.po  ca.po  ca@valencia.po  ckb.po  cs.po  cy.po  da.po  de.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  fr_CA.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  ie.po  is.po  (+42 more)
pygobject/: Makefile.am  XApp.py  meson.build
schemas/: Makefile.am  meson.build  org.x.apps.gschema.xml  org.x.apps.gschema.xml.in.in  org.x.apps.mate-panel-applet.gschema.xml
scripts/: meson.build  xapp-gpu-offload  xfce4-set-wallpaper
status-applets/: meson.build
status-applets/mate/: applet_constants.py.in  mate-xapp-status-applet.py  meson.build  org.mate.panel.applet.MateXAppStatusAppletFactory.service.in  org.x.MateXAppStatusApplet.mate-panel-applet.in  org.x.MateXAppStatusApplet.mate-panel-applet.in.in
status-applets/xfce/: meson.build  statusicon.c  statusicon.h  xappstatusapplet.c  xappstatusapplet.desktop.in  xappstatusapplet.h
test-scripts/: xapp-favorites  xapp-gpu-offload-helper  xapp-gtk-window  xapp-icon-chooser-dialog  xapp-icon-chooser-dialog-full-test  xapp-kbd-layout-controller  xapp-status-applet  xapp-status-icon  xapp-status-icon-ai  xapp-status-icon-ai-gtk2  xapp-status-listener  xapp-status-manager  xapp-status-report.py
test-scripts/xapp-status-icon-variants/: qt-system-tray.py  xapp-status-icon-activate-and-menu  xapp-status-icon-activate-and-menu-popup  xapp-status-icon-ai  xapp-status-icon-all-menus  xapp-status-icon-no-menus  xapp-status-icon-raw-events
vapi/: XApp-1.0.metadata  generate_vapi
xapp-sn-daemon/: itemWrapper.py  itemwrapper.py  nameWatcher.py  notifierItem.py  util.py  xapp-sn-daemon.py
xapp-sn-watcher/: itemWrapper.py  meson.build  nameWatcher.py  notifierItem.py  org.x.StatusNotifierWatcher.service.in  sn-item.c  sn-item.h  sn-item.xml  sn-watcher.xml  xapp-sn-watcher.c  xapp-sn-watcher.desktop.in  xapp-sn-watcher.py
